# meeting-transcriber

./: .gitignore  LICENSE  README.md  pyproject.toml
meeting_transcriber/: audio_chunker.py  audio_transcribe.py  fastapi_app.py  transcribe_command.py  transcription_utils.py  util.py
src/: audio_transcribe.py  transcribe_command.py
web/: app.js  index.html  styles.css
