[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "A tool for transcribing meeting audio to text."
authors = [{ name = "Gordon Watts", email = "gordon@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = ["whisper>=1.0", "typer>=0.3.2"]

[project.optional-dependencies]
test = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/gwatts/meeting-transcriber"
Documentation = "https://github.com/gwatts/meeting-transcriber/docs"
Source = "https://github.com/gwatts/meeting-transcriber"
Tracker = "https://github.com/gwatts/meeting-transcriber/issues"

[project.scripts]
transcribe = "src.transcribe_command:app"

[tool.hatch.version]
path = "meeting_transcriber/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
include = ["src/**"]
