[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "A tool for transcribing meeting audio to text."
authors = [{ name = "Gordon Watts", email = "gordon@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "whisper>=1.0",
    "typer>=0.3.2",
    "pydub",
    "openai",
    "diskcache",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
test = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/gwatts/meeting-transcriber"
Documentation = "https://github.com/gwatts/meeting-transcriber/docs"
Source = "https://github.com/gwatts/meeting-transcriber"
Tracker = "https://github.com/gwatts/meeting-transcriber/issues"

[project.scripts]
transcribe = "meeting_transcriber.transcribe_command:app"
transcribe_app = "meeting_transcriber.fastapi_app:main"

[tool.hatch.version]
path = "meeting_transcriber/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["meeting_transcriber/**"]

[tool.hatch.build.targets.wheel]
include = ["meeting_transcriber/**"]
